web-infras/parser/tests/fixtures/babel/es2016/exponentiation-operator/await-before-exponential/output.txt
[SyntaxError]: Illegal expression. Wrap left hand side or entire exponentiation in parentheses (1,13)
1|async () => await 5 ** 6;
 |           ^
